crates/math-core/tests/snapshots/custom_cmd_test__config_macros_referring_to_each_other.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\half"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
