crates/math-core/tests/snapshots/custom_cmd_test__custom_cmd_leading_plus_subscript.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "y\\plusx_2)"
---
<math>
    <mi>y</mi>
    <mo>+</mo>
    <msub>
        <mi>x</mi>
        <mn>2</mn>
    </msub>
    <mo stretchy="false">)</mo>
</math>
