crates/math-core/tests/snapshots/custom_cmd_test__custom_cmd_literal_args.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "x \\hs{3em} y"
---
<math>
    <mi>x</mi>
    <mspace width="3em"/>
    <mi>y</mi>
</math>
