crates/math-core/tests/snapshots/custom_cmd_test__custom_cmd_one_arg.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "x = \\mycmd{3} + \\half"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mtable displaystyle="false" scriptlevel="0">
        <mtr>
            <mtd style="border-right: 0.05em solid currentcolor;">
                <mn>3</mn>
            </mtd>
            <mtd>
                <mn>0</mn>
            </mtd>
        </mtr>
    </mtable>
    <mo>+</mo>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
    <mspace width="0.16666667em"/>
</math>
