crates/math-core/tests/snapshots/custom_cmd_test__custom_cmd_plus_subscript_before_closing_paren.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "x\\plus_2)"
---
<math>
    <mi>x</mi>
    <msub>
        <mo lspace="0" rspace="0">+</mo>
        <mn>2</mn>
    </msub>
    <mo stretchy="false">)</mo>
</math>
