crates/math-core/tests/snapshots/custom_cmd_test__custom_cmd_spacing.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "x + \\eq 3"
---
<math>
    <mi>x</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mo>=</mo>
    <mn>3</mn>
</math>
