crates/math-core/tests/snapshots/custom_cmd_test__custom_cmd_zero_arg.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "x = \\half, \\withText 3"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
    <mo>,</mo>
    <mtext>a b</mtext>
    <mo>∑</mo>
    <mn>3</mn>
</math>
