crates/math-core/tests/snapshots/custom_cmd_test__def_after_let.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\let\\oldalpha\\alpha\\def\\alpha{1+\\oldalpha}\\alpha"
---
<math>
    <mn>1</mn>
    <mo>+</mo>
    <mi>α</mi>
</math>
